@@ -1,16 +1,0 @@
-<h1 id="changes-in-version-1-0.1-xxxx2015">Changes in version 1-0.1 (xx/xx/2015)</h1>
-<h1 id="changes-in-version-1-0.0-12072014">Changes in version 1-0.0 (12/07/2014)</h1>
-<ul>
-<li>Improved LHS annotation for grouped plot</li>
-<li>Version 1-0.0 release</li>
-</ul>
-<h1 id="changes-in-version-0-1.9-3102014">Changes in version 0-1.9 (3/10/2014)</h1>
-<ul>
-<li>Cleaned up dependencies on Rgraphviz</li>
-</ul>
-<p>Changes in version 0.1-8 (2/18/2014) * Cleaned up dependencies (moved most to imports)</p>
-<p>Changes in version 0.1-7 (8/11/2013) * plot checks now if 0 rules/itemsets are used * scatterplots with a single rule now display correctly * transition from igraph0 to igraph</p>
-<p>Changes in version 0.1-6 (5/25/2013) * plot method matrix does not accept custom colors</p>
-<p>Changes in version 0.1-5 (3/02/2012) * fixed namespace (imports seriation now)</p>
-<p>Changes in version 0.1-4 (11/7/2011) * fixed font family for igraph under windows (is now Arial).</p>
-<p>Initial version 0.1-0 (12/17/2010)</p>
