@@ -1,5 +1,6 @@
-Changes in version 1-0.5 (xx/xx/2015)
+Changes in version 1-0.4.1 (xx/xx/2015)
     * abbreviate has been moved to arules. 
+    * fixed bug in grouped plots when the quality of many rules is identical.
 
 Changes in version 1-0.4 (09/15/2015)
     * fixed empty LHS problem in grouped plot (reported by Andrew Collier)
